@@ -3,7 +3,7 @@ requires "Config::INI::Reader" => "0";
 requires "Cwd" => "0";
 requires "Data::Dumper" => "0";
 requires "Date::Format" => "0";
-requires "Digest::SHA1" => "0";
+requires "Digest::SHA" => "0";
 requires "Exporter" => "0";
 requires "File::Basename" => "0";
 requires "File::Find" => "0";
