@@ -8,7 +8,7 @@ use Code::TidyAll::Util
     qw(abs2rel basename can_load dirname dump_one_line mkpath read_dir rel2abs tempdir_simple uniq);
 use Code::TidyAll::Result;
 use Date::Format;
-use Digest::SHA1 qw(sha1_hex);
+use Digest::SHA qw(sha1_hex);
 use File::Find qw(find);
 use File::Slurp::Tiny qw(read_file write_file);
 use File::Zglob;
